@startuml PizzaBuilder
interface IPizzaBuilder {
  + void AddDough()
  + void AddMeat()
  + void AddCheese()
  + void AddVegetables()
  + void AddSpices()
  + Pizza GetPizza()
}

class CapricciosaBuilder implements IPizzaBuilder {
  - Pizza pizza
  + void AddDough()
  + void AddMeat()
  + void AddCheese()
  + void AddVegetables()
  + void AddSpices()
  + Pizza GetPizza()
}

class Pizza {
  + string Description
}

class Director {
  + void Construct(IPizzaBuilder builder)
}

Director ..> IPizzaBuilder : uses
CapricciosaBuilder *-- Pizza : contains
@enduml